--- a/src/.gitignore
+++ b/src/.gitignore
@@ -2,3 +2,8 @@
 /cimgs_working.tar.gz
 /cimgspi.tar.gz
 /hs_err_pid22737.log
+/output.jpg
+/libSenderImpl.so
+/java-converted-from-jni.jpg
+/hs_err_pid27094.log
+/hs_err_pid26930.log
